@@ -14110,6 +14110,21 @@ begin
      End;
  end
 
+ else if LowerCase (s) = LowerCase ('which') then
+ begin
+  if Skip ('(', r, r, InfoSyntaxError)
+  then
+   if EvaluateString (r, r, s1, InfoSyntaxError)
+   then
+     if Skip (')', r,r, InfoSyntaxError)
+     then
+     Begin
+         syntaxCheck := true;
+         if not which(s1,StringResult) then
+            StringResult := '';
+     End;
+ end
+
  else if LowerCase (s) = LowerCase ('asConfidential') then
  begin
   // backup and set loglevel to warning
